fix: leave table sort icons fully visible at all times

--- a/packages/pelagos/src/table/Table.less
+++ b/packages/pelagos/src/table/Table.less
@@ -197,17 +197,9 @@
 			color: var(--icon-secondary);
 			vertical-align: -2px;
 			cursor: pointer;
-			opacity: 0.25;
-			transition: opacity 0.15s ease-out;
 
 			.Table__sort--active > & {
 				color: var(--icon-primary);
-				opacity: 1;
-			}
-
-			.Table__sort:hover &,
-			.Table__sort:focus & {
-				opacity: 1;
 			}
 
 			@media print {
